--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -611,7 +611,12 @@ pre code {
   .contact .social-icons a .fa:before {
     font-size: 18px;
   }
+  .imglogo {
+    width: 200px;
+    height: 300px;
+  }
 }
 /* Small devices (tablets, 768px and up) */
 /* Medium devices (desktops, 992px and up) */
 /* Large devices (large desktops, 1200px and up) */
+
