--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -169,53 +169,79 @@ a.btn-cta-secondary:hover,
   ul.menu > li:hover > ul.submenu {
     display: block;
 }
-ul {
+header {
+  background: white;
+  text-align: center;
+}
+header a {
+  text-decoration: none;
+  outline: none;
   display: block;
+  transition: .3s ease-in-out;
+}
+.logo {
+  color: #D5B45B;
+  font-family: 'Playfair Display', serif;
+  font-size: 2.5em;
+  padding: 20px 0;
+}
+nav {
+  display: table;
+  margin: 0 auto;
+}
+nav ul {
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
 }
-ul:after {
-  display: block;
-  content: ' ';
+.topmenu:after {
+  content: "";
+  display: table;
   clear: both;
-  float: none;
 }
-ul.menu > li {
+.topmenu > li {
+  width: 25%;
   float: left;
   position: relative;
+  font-family: 'Open Sans', sans-serif;
 }
-ul.menu > li > a {
-  display: block;
-  padding: 10px;
-  color: white;
-  background-color: red;
-  text-decoration: none;
+.topmenu > li > a {
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: bold;
+  color: #404040;
+  padding: 15px 30px;
 }
-ul.menu > li > a:hover {
-  background-color: black;
+.topmenu li a:hover { color: #D5B45B; }
+.submenu-link:after {
+  content: "\f107";
+  font-family: "FontAwesome";
+  color: inherit;
+  margin-left: 10px;
 }
-ul.submenu {
-  display: none;
+.submenu {
+  background: #273037;
   position: absolute;
-  width: 120px;
-  top: 37px;
   left: 0;
-  background-color: white;
-  border: 1px solid red;
+  top: 100%;
+  z-index: 5;
+  width: 180px;
+  opacity: 0;
+  transform: scaleY(0);
+  transform-origin: 0 0;
+  transition: .5s ease-in-out;
 }
-ul.submenu > li {
-  display: block;
-}
-ul.submenu > li > a {
-  display: block;
-  padding: 10px;
+.submenu a {
   color: white;
-  background-color: red;
-  text-decoration: none;
+  text-align: left;
+  padding: 12px 15px;
+  font-size: 13px;
+  border-bottom: 1px solid rgba(255,255,255,.1);
 }
-ul.submenu > li > a:hover {
-  text-decoration: underline;
+.submenu li:last-child a { border-bottom: none; }
+.topmenu > li:hover .submenu {
+  opacity: 1;
+  transform: scaleY(1);
 }
 .header .main-nav .nav .nav-item a:hover {
   color: #074f66;
