--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -188,6 +188,7 @@ header a {
 nav {
   display: table;
   margin: 0 auto;
+  text-align: left;
 }
 nav ul {
   list-style: none;
@@ -233,7 +234,7 @@ nav ul {
 }
 .submenu a {
   color: white;
-  text-align: left;
+  text-align: right;
   padding: 12px 15px;
   font-size: 13px;
   border-bottom: 1px solid rgba(255,255,255,.1);
