--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -88,6 +88,9 @@ a.btn-cta-secondary:hover,
 .offset-header {
   padding-top: 90px;
 }
+pre code {
+  font-size: 16px;
+}
 /* ======= Header ======= */
 .header {
   padding: 10px 0;
@@ -166,84 +169,6 @@ a.btn-cta-secondary:hover,
   margin: 0 auto;
   margin-bottom: 30px;
   }
-  ul.menu > li:hover > ul.submenu {
-    display: block;
-}
-header {
-  background: white;
-  text-align: center;
-}
-header a {
-  text-decoration: none;
-  outline: none;
-  display: block;
-  transition: .3s ease-in-out;
-}
-.logo {
-  color: #D5B45B;
-  font-family: 'Playfair Display', serif;
-  font-size: 2.5em;
-  padding: 20px 0;
-}
-nav {
-  display: table;
-  margin: 0 auto;
-  text-align: left;
-}
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-.topmenu:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.topmenu > li {
-  width: 25%;
-  float: left;
-  position: relative;
-  font-family: 'Open Sans', sans-serif;
-}
-.topmenu > li > a {
-  text-transform: uppercase;
-  font-size: 14px;
-  font-weight: bold;
-  color: #404040;
-  padding: 15px 30px;
-}
-.topmenu li a:hover { color: #D5B45B; }
-.submenu-link:after {
-  content: "\f107";
-  font-family: "FontAwesome";
-  color: inherit;
-  margin-left: 10px;
-}
-.submenu {
-  background: #273037;
-  position: absolute;
-  left: 0;
-  top: 100%;
-  z-index: 5;
-  width: 180px;
-  opacity: 0;
-  transform: scaleY(0);
-  transform-origin: 0 0;
-  transition: .5s ease-in-out;
-}
-.submenu a {
-  color: white;
-  text-align: right;
-  padding: 12px 15px;
-  font-size: 13px;
-  border-bottom: 1px solid rgba(255,255,255,.1);
-}
-.submenu li:last-child a { border-bottom: none; }
-.topmenu > li:hover .submenu {
-  opacity: 1;
-  transform: scaleY(1);
-}
 .header .main-nav .nav .nav-item a:hover {
   color: #074f66;
   background: none;
@@ -693,20 +618,7 @@ nav ul {
   .contact .social-icons a .fa:before {
     font-size: 18px;
   }
-  .imglogo {
-    width: 10px;
-    height: 10px;
-  }
-  .avatar-container {
-    text-align: center;
-  }
-  
-  .avatar {
-    border-radius: 50%;
-  }
-  
 }
 /* Small devices (tablets, 768px and up) */
 /* Medium devices (desktops, 992px and up) */
 /* Large devices (large desktops, 1200px and up) */
-
